# cs132-CalyphYakult

./: 224.csv  README.md  dump.html  filename.csv  index.html  main.py  pyproject.toml
assets/: data.js  script.js  style.css
data/: ineq_index.csv  ineq_index2.csv  nutshell_plots.ipynb  pyproject.toml  question1.csv  question2.csv  regional_budget.csv  regional_budget.xlsx  rq1_plots.py  rq2_plots.ipynb  statistical_test.py  statistical_test2.py  total_budget.csv
machine learning/: clustering.py
src/: index.html
