[project]
name = "cs132-calyphyakult"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens>=3.0.0",
    "chart-studio>=1.1.0",
    "comm>=0.2.2",
    "djlint>=1.36.4",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
]

[tool.uv.workspace]
members = [
    "data",
]
